src/snapshots/alma__parser__tests__test_expression__pattern_matching_multiple_values.snap
---
source: src/parser.rs
assertion_line: 3057
expression: "parse(\"\\\nwhen 5, is\n    x if x > 3 -> 5\n\")"
---
Input:

when 5, is
    x if x > 3 -> 5


Result:

Test.alma:1:8

Expected an expression to match on, but instead found: `is`

  1│  when 5, is
   │          ↑↑
  2│      x if x > 3 -> 5

Error {
    kind: InvalidPatternMatchingExpression,
    token: Token {
        kind: Is,
        indent: 0,
        start: 8,
        end: 10,
        line: 1,
        column: 8,
    },
}
