src/snapshots/alma__parser__tests__test_expression__property_access-3.snap
---
source: src/parser.rs
assertion_line: 2418
expression: "parse(\"a.b.c.d\")"
---
Input:

a.b.c.d

Result:

Expression {
    span: Index(
        6,
    ),
    typ: RefCell {
        value: None,
    },
    expr: PropertyAccess {
        expression: Expression {
            span: Index(
                4,
            ),
            typ: RefCell {
                value: None,
            },
            expr: PropertyAccess {
                expression: Expression {
                    span: Index(
                        2,
                    ),
                    typ: RefCell {
                        value: None,
                    },
                    expr: PropertyAccess {
                        expression: Expression {
                            span: Index(
                                0,
                            ),
                            typ: RefCell {
                                value: None,
                            },
                            expr: Identifier {
                                module: None,
                                identifier: Identifier(
                                    Identifier {
                                        name: SymbolU32 {
                                            value: 1,
                                        },
                                        span: Index(
                                            0,
                                        ),
                                    },
                                ),
                            },
                        },
                        property: Identifier {
                            name: SymbolU32 {
                                value: 2,
                            },
                            span: Index(
                                1,
                            ),
                        },
                    },
                },
                property: Identifier {
                    name: SymbolU32 {
                        value: 3,
                    },
                    span: Index(
                        3,
                    ),
                },
            },
        },
        property: Identifier {
            name: SymbolU32 {
                value: 4,
            },
            span: Index(
                5,
            ),
        },
    },
}
