src/snapshots/alma__parser__tests__test_expression__record-2.snap
---
source: src/parser.rs
assertion_line: 2998
expression: "parse(\"let a = { in 5\")"
---
Input:

let a = { in 5

Result:

Test.alma:1:10

Expected a record literal `{ x: 1, y: 2 }` or a record update `{ record | x: 5, y: 4 }`, but instead found: `in`

  1│  let a = { in 5
   │            ↑↑

Error {
    kind: InvalidRecordFieldsOrExtensibleRecordExpression,
    token: Token {
        kind: In,
        indent: 0,
        start: 10,
        end: 12,
        line: 1,
        column: 10,
    },
}
