src/snapshots/alma__parser__tests__test_expression__record-5.snap
---
source: src/parser.rs
assertion_line: 2400
expression: "parse(\"{ Sneaky : 5 }\")"

---
Input:

{ Sneaky : 5 }

Result:

:1:9

Expected a record literal `{ x = 1, y = 2 }`or a record update `{ record | x = 5, y = 4 }`, but instead found: `:`

  1│  { Sneaky : 5 }
   │           ↑

Error {
    kind: InvalidRecordFieldsOrExtensibleRecordExpression,
    token: Token {
        kind: Colon,
        position: 9,
        end_position: 10,
        lexeme: ":",
        line: 1,
        column: 9,
        indent: 0,
    },
}
