src/snapshots/alma__parser__tests__test_expression__record-6.snap
---
source: src/parser.rs
assertion_line: 2544
expression: "parse(\"{ , x : 5 }\")"
---
Input:

{ , x : 5 }

Result:

Test.alma:1:2

Expected a record literal `{ x = 1, y = 2 }`or a record update `{ record | x = 5, y = 4 }`, but instead found: `,`

  1│  { , x : 5 }
   │    ↑

Error {
    kind: InvalidRecordFieldsOrExtensibleRecordExpression,
    token: Token {
        kind: Comma,
        indent: 0,
        start: 2,
        end: 3,
        line: 1,
        column: 2,
    },
}
