src/snapshots/alma__parser__tests__test_expression__record_update-2.snap
---
source: src/parser.rs
assertion_line: 2450
expression: "parse(\"{ 5 : x = 1 }\")"

---
Input:

{ 5 : x = 1 }

Result:

:1:4

Expected a record literal `{ x = 1, y = 2 }`or a record update `{ record | x = 5, y = 4 }`, but instead found: `:`

  1│  { 5 : x = 1 }
   │      ↑

Error {
    kind: InvalidRecordFieldsOrExtensibleRecordExpression,
    token: Token {
        kind: Colon,
        position: 4,
        end_position: 5,
        lexeme: ":",
        line: 1,
        column: 4,
        indent: 0,
    },
}
