src/snapshots/alma__parser__tests__test_expression__record_update-3.snap
---
source: src/parser.rs
assertion_line: 2965
expression: "parse(\"{ 5 | x = 1, y = 3 }\")"
---
Input:

{ 5 | x = 1, y = 3 }

Result:

{ 0:20
    record:
        Float 5 2:3
    |
        x 6:7 :
            Float 1 10:11
        y 13:14 :
            Float 3 17:18
}
